@startuml

class Company
class CompanyEmployee
class Employee
class Project
class Integration
class Settings
enum AppRole {
 owner
 admin
 manager
 hr
 employee
}
class Invitation


Project "*" o-- "1" Company
Settings "*" o-- "1" Company
Integration "*" o-- "1" Company
CompanyEmployee "*" o-- "1" Company
CompanyEmployee "*" o-- "1" Employee
CompanyEmployee "*" o-- "1" AppRole
CompanyEmployee "*" o-- "1" AppRole



@enduml